Refactor HTML structure and enhance meta tags for better SEO and mobile optimization

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Interactive web application for students learning automation testing to practice XPath and CSS selectors with 20 progressive exercises from basic to advanced levels." />
+  <meta name="keywords"
+    content="xpath, css selector, automation testing, selenium, web scraping, practice, exercises, tutorial, learning" />
+  <meta name="author" content="XPath CSS Selector Practice" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="XPath & CSS Selector Practice - Learn Automation Testing" />
+  <meta property="og:description"
+    content="Master XPath and CSS selectors with 20 interactive exercises designed for automation testing students. Practice from basic to advanced selector techniques." />
+  <meta property="og:url" content="https://xpath-css-practice.netlify.app" />
+  <meta property="og:site_name" content="XPath CSS Selector Practice" />
+
+  <!-- Theme and mobile optimization -->
+  <meta name="theme-color" content="#2563eb" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="XPath CSS Practice" />
+
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <title>XPath & CSS Selector Practice - Learn Automation Testing</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
